prevent flicker of mobile menu in tpl_modified_nova
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@15637 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_nova/stylesheet.css
+++ b/templates/tpl_modified_nova/stylesheet.css
@@ -155,6 +155,7 @@ body {
 
 /* prevent flicker of mobile menu */
 #mobile_menu { display:none; }
+.mobile_menu { display:none; }
 
 /* scrollbars */
 * {
